Bug 1028428 - clang+libc++ still doesn't provide a usable std::is_destructible, so just use the fallback implementation instead - no review, bustage fix